--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,8 +24,10 @@
             android:id="@+id/txtAppDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25sp"
             android:text="@string/app_desc"
-            android:layout_centerInParent="true"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="120dp"/>
         <Button
             android:id="@+id/btnStart"
             android:layout_width="90dp"
