Views and activity added for each page. Some layouts also updated with id Manifest file updated to register activity Custom drawable created for showing white cross in black circle Navigation added.

--- a/app/src/main/res/layout/instruction_view.xml
+++ b/app/src/main/res/layout/instruction_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/view_activity_instructions"
     >
     <RelativeLayout
         android:id="@+id/header"
@@ -37,6 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:id="@+id/txtTotalCost"
         android:text="Total Cost: 1250 Kr"
         android:gravity="center_vertical"
         android:layout_alignParentRight="true"
@@ -62,7 +64,7 @@
             <ImageView
                 android:layout_width="73dp"
                 android:layout_height="73dp"
-
+                android:id="@+id/imgIngredients"
                 android:background="@drawable/ingredients"/>
         </LinearLayout>
         <TextView
@@ -108,12 +110,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_1"
                         android:background="@drawable/crostini"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_1"
                     android:text="Crostini"
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -133,12 +136,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_2"
                         android:background="@drawable/chicken"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_2"
                     android:text="Chicken"
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -158,12 +162,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_3"
                         android:background="#800000"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_3"
                     android:text=""
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -210,7 +215,7 @@
             android:textSize="25sp"
 
             android:text="@string/ins_crostini"
-            android:id="@+id/txtInstructionCrostini"
+            android:id="@+id/txtCookingInstruction"
             />
     </LinearLayout>
 </RelativeLayout>
