--- a/app/src/main/res/layout/example_view.xml
+++ b/app/src/main/res/layout/example_view.xml
@@ -9,6 +9,7 @@
         android:id="@+id/example_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
