--- a/app/src/main/res/layout/ingredients_view.xml
+++ b/app/src/main/res/layout/ingredients_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/view_activity_ingredients"
     >
     <RelativeLayout
         android:id="@+id/header"
@@ -37,6 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:id="@+id/txtTotalCost"
         android:text="Total Cost: 1250 Kr"
         android:gravity="center_vertical"
         android:layout_alignParentRight="true"
@@ -62,7 +64,7 @@
             <ImageView
                 android:layout_width="73dp"
                 android:layout_height="73dp"
-
+                android:id="@+id/imgIngredients"
                 android:background="@drawable/ingredients"/>
         </LinearLayout>
         <TextView
@@ -108,12 +110,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_1"
                         android:background="@drawable/crostini"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_1"
                     android:text="Crostini"
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -133,12 +136,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_2"
                         android:background="@drawable/chicken"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_2"
                     android:text="Chicken"
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -158,12 +162,13 @@
                     <ImageView
                         android:layout_width="73dp"
                         android:layout_height="73dp"
-
+                        android:id="@+id/imgInstructionDish_3"
                         android:background="#800000"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
+                    android:id="@+id/txtNameDish_3"
                     android:text=""
                     android:textSize="15sp"
                     android:gravity="center"/>
@@ -205,30 +210,35 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_1"
                     android:layout_marginTop="10dp"
                     android:text="Chicken"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_2"
                     android:layout_marginTop="5dp"
                     android:text="Bread"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_3"
                     android:layout_marginTop="5dp"
                     android:text="Tomato"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_4"
                     android:layout_marginTop="5dp"
                     android:text="Salad"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_5"
                     android:layout_marginTop="5dp"
                     android:text="Cheese"
                     android:textSize="20sp"/>
@@ -241,30 +251,35 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_1_amount"
                     android:layout_marginTop="10dp"
                     android:text="1200 gr"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_2_amount"
                     android:layout_marginTop="5dp"
                     android:text="2 loafs"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_3_amount"
                     android:layout_marginTop="5dp"
                     android:text="2 pcs"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_4_amount"
                     android:layout_marginTop="5dp"
                     android:text="100 gr"
                     android:textSize="20sp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtIngredient_5_amount"
                     android:layout_marginTop="5dp"
                     android:text="650 gr"
                     android:textSize="20sp"/>
@@ -274,6 +289,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/txtNumberofPerson"
         android:layout_below="@id/vhorizontalbar"
         android:layout_alignParentRight="true"
         android:layout_marginTop="15dp"
