--- a/app/src/main/res/layout/instruction_view.xml
+++ b/app/src/main/res/layout/instruction_view.xml
@@ -104,7 +104,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:background="#800000"
-
+                    android:id="@+id/crostiniLayout"
                     android:gravity="center"
                     >
                     <ImageView
@@ -130,7 +130,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:background="#00800000"
-
+                    android:id="@+id/chickenLayout"
                     android:gravity="center"
                     >
                     <ImageView
