Lab3: added observer and observable          added listener to change number of guests and select dishes

--- a/app/src/main/res/layout/item_price_dialog.xml
+++ b/app/src/main/res/layout/item_price_dialog.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/view_dialog_activity_item_price"
-
-    android:background="#55000000"
-    >
+    android:background="#55000000">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-
             android:orientation="vertical"
             android:background="@drawable/rect_border_magenta">
             <TextView
@@ -38,8 +35,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/imgDish"
                     android:layout_width="120dp"
@@ -51,11 +47,12 @@
                     android:layout_marginLeft="10dp"
                     android:layout_gravity="center"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/txttotalDishCost"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_gravity="top|right"
                         android:textSize="23sp"
                         android:text="Cost: 80 Kr"/>
                     <TextView
@@ -90,8 +87,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/white_cross_in_black_circle"
-
-                />
+                android:id="@+id/imgCross"/>
         </LinearLayout>
 
     </RelativeLayout>
