--- a/app/src/main/res/layout/menu_item_view.xml
+++ b/app/src/main/res/layout/menu_item_view.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="110dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_height="115dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:background="#00ffffff"
     android:orientation="vertical"
+    android:padding="2dp"
     android:id="@+id/llMenuItem">
 
     <ImageView
-            android:layout_width="100dp"
+            android:layout_width="95dp"
             android:layout_height="90dp"
-            android:id="@+id/imgDessertItem_2"
-            android:layout_gravity="center_horizontal"
+            android:id="@+id/imgDishItem"
             android:background="@drawable/bakedbrie"
+            android:cropToPadding="true"
             />
-        <TextView
-            android:layout_width="wrap_content"
+    <TextView
+            android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:id="@+id/txtDessertItem_2"
+            android:id="@+id/txtDishItem"
             android:layout_gravity="center"
             android:textStyle="bold"
-            android:text="Some Name"
-            />
+            android:background="#ffffffff"
+            android:text="Some Name"/>
 
 </LinearLayout>
