--- a/app/src/main/res/layout/instruction_view.xml
+++ b/app/src/main/res/layout/instruction_view.xml
@@ -16,7 +16,7 @@
             android:textColor="#ffffff"
             android:textStyle="bold"
             android:layout_centerInParent="true"
-            android:text="Dinner Planner"/>
+            android:text="@string/app_name"/>
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/llbackarrow"
