--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -6,8 +6,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#800000"
-        >
+        android:background="#800000">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,13 +25,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Participants"
+                android:text="@string/text_participants"
                 android:layout_gravity="center_vertical"
                 android:textSize="25sp"/>
             <LinearLayout
@@ -40,8 +38,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="@drawable/rect_border">
-                <TextView
+                <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/txtNumberofGuests"
@@ -49,13 +49,9 @@
                     android:textSize="20sp"
                     android:textColor="#000000"
                     android:layout_gravity="center_vertical"
-                    android:text="4"/>
-                <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="top"
-                    android:background="@drawable/downarrow"
-                    />
+                    android:text="0"
+                    android:inputType="number"/>
+
             </LinearLayout>
 
         </LinearLayout>
@@ -63,15 +59,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            >
+            android:layout_gravity="center_vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#000000"
+                android:text="@string/text_totalCost"/>
             <TextView
                 android:id="@+id/txtTotalCost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:textColor="#000000"
-                android:text="Total Cost: 0 Kr"/>
+                android:textColor="#000000"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -86,7 +86,7 @@
             android:textSize="20sp"
             android:textColor="#000000"
             android:layout_marginLeft="30dp"
-            android:text="Choose Menu"/>
+            android:text="@string/text_choosemenu"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -98,7 +98,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:isScrollContainer="false"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="15dp"
@@ -113,8 +113,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:id="@+id/starter"
-                />
+                android:text="@string/text_starter"/>
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,13 +124,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <include layout="@layout/menu_item_view" />
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
                 </LinearLayout>
             </HorizontalScrollView>
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -139,7 +133,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:id="@+id/maincourse"/>
+                android:text="@string/text_main"/>
 
             <HorizontalScrollView
                 android:layout_width="wrap_content"
@@ -150,11 +144,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
-                    <include layout="@layout/menu_item_view" />
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
                 </LinearLayout>
             </HorizontalScrollView>
 
@@ -164,7 +153,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="#000000"
-                android:id="@+id/dessert"/>
+                android:text="@string/text_dessert"/>
             <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -175,29 +164,26 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                        <include layout="@layout/menu_item_view" />
-
-
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
-                    <include layout="@layout/menu_item_view"/>
                 </LinearLayout>
             </HorizontalScrollView>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/btnCreate"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="#800000"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:text="Create"/>
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:id="@+id/btnCreate"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="#800000"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/text_create"
+
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
